syntax = "proto3";

package v2ray.core.proxy.anytls;
option csharp_namespace = "V2Ray.Core.Proxy.AnyTLS";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/anytls";
option java_package = "com.v2ray.core.proxy.anytls";
option java_multiple_files = true;

// Account represents an AnyTLS user account
message Account {
  string password = 1;
}

// ServerEndpoint represents an AnyTLS server configuration
message ServerEndpoint {
  string address = 1;
  uint32 port = 2;
  string password = 3;
}

// ClientConfig is the protobuf config for AnyTLS outbound client
message ClientConfig {
  // Server is the upstream AnyTLS server endpoint
  repeated ServerEndpoint servers = 1;
  
  // Idle session check interval in seconds (default: 30)
  uint32 idle_session_check_interval = 2;
  
  // Idle session timeout in seconds (default: 30)
  uint32 idle_session_timeout = 3;
  
  // Minimum number of idle sessions to keep (default: 0)
  uint32 min_idle_session = 4;
}
